# NeutArr

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY-AUDIT-COMPARISON.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  release-please-config.json
.github/ISSUE_TEMPLATE/: 1-bug.yml  2-feature.yml  3-help.yml  config.yml
.github/workflows/: ci.yml  conventional-commits.yml  docker-image.yml  dockerhub-description.yml  release-please.yaml
docker/: entrypoint.sh
docs/: README.md  index.html
docs/apps/: index.html  sonarr.html
docs/features/: scheduling.html
docs/getting-started/: installation.html
docs/js/: main.js
docs/settings/: general.html  index.html
frontend/static/css/: apps-double-scroll-fix.css  apps-scroll-fix.css  style.css  variables.css
frontend/static/js/: apps.js  auth.js  community-resources.js  direct-reset.js  history.js  hourly-cap.js  new-main.js  new-user.js  scheduling.js  settings_forms.js  stats-reset.js  theme-preload.js  utils.js
frontend/templates/: base.html  index.html  login.html  scheduling.html  setup.html  user.html
frontend/templates/components/: apps_section.html  cleanuperr_section.html  footer.html  head.html  home_section.html  (+5 more)
src/primary/: __init__.py  api.py  app.py  app_manager.py  auth.py  background.py  config.py  history_manager.py  hourly_cap_scheduler.py  keys_manager.py  scheduler_engine.py  settings_manager.py  state.py  stateful_manager.py  stateful_routes.py  stats_manager.py  web_server.py
(+66 files in other folders)
